--- a/src/App.css
+++ b/src/App.css
@@ -1059,3 +1059,18 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid rgba(255, 255, 255, 0.2);
+  border-top-color: #fff;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
